# i-use-arch-btw

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  README.md  SPECIFICATION.md  rules.mk
cmake-3.29.0-rc3-linux-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-3.29.0-rc3-linux-x86_64/doc/cmake/html/_static/: classic.css  documentation_options.js
cmake-3.29.0-rc3-linux-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  (+88 more)
cmake-3.29.0-rc3-linux-x86_64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake-3.29.0-rc3-linux-x86_64/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_BUILD_TYPE.html  (+61 more)
cmake-3.29.0-rc3-linux-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.29.0-rc3-linux-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
cmd/: CMakeLists.txt  Makefile  compile_and_run.c  compile_and_run.h  debug_handler.c  debug_handler.h  log.h  main.c  version.h.in
cmd/src/: log.c  log.h  main.c  options.c  options.h  timer.c  timer.h  version.h
docs/: LANG_SPEC.md  VM_SPEC.md  language_specification.md
examples/: README.md  alphabet.archbtw  debug-info.archbtw  echo.archbtw  hello-world.archbtw  i-prefer-brainfuck-minimal.archbtw  i-prefer-brainfuck.archbtw  i-use-arch-btw-forever.archbtw  loop-print.archbtw  print-null-char.archbtw  reverse.archbtw
examples/error/compiler/: invalid-token.archbtw  max-nested-loop-depth.archbtw  unclosed-loops.archbtw  unexpected-loop-end.archbtw
examples/error/vm/: data-pointer-overflow.archbtw  data-pointer-underflow.archbtw
examples/errors/compile/: compile-time-data-pointer-out-of-max-bound.archbtw  compile-time-data-pointer-out-of-min-bound.archbtw  invalid-token.archbtw  unclosed-loops.archbtw  unexpected-loop-end.archbtw
examples/errors/run/: data-pointer-out-of-max-bound.archbtw  data-pointer-out-of-min-bound.archbtw
examples/libiuab/: CMakeLists.txt
examples/libiuab/cpp/: Makefile  README.md  example.cpp
examples/libiuab/i-use-arch-btwxx/: CMakeLists.txt  README.md  main.cpp
examples/libiuab/token-printer/: CMakeLists.txt  README.md  main.c
examples/safety/: pointer-overflow.archbtw  pointer-underflow.archbtw  stack-pointer-overflow.archbtw  stack-pointer-underflow.archbtw
i-use-arch-btw-with-rust/: Cargo.toml
i-use-arch-btw-with-rust/src/: main.rs
lib/: CMakeLists.txt  Makefile  libiuab.pc.in
lib/include/iuab/: buffer.h  compiler.h  context.h  errors.h  lexer.h  op.h  targets.h  token.h  version.h  version.h.in  vm.h
lib/include/iuab/targets/: bytecode.h  jit_x86_64.h
lib/src/: buffer.c  compiler.c  context.c  errors.c  lexer.c  op.c  targets.c  token.c  vm.c
lib/src/targets/: bytecode.c  bytecode_compile.c  bytecode_run.c  jit_x86_64_compile.c  jit_x86_64_run.c
src/: main.c  opcode.h  parser.c  parser.h  safety.c  safety.h  util.c  util.h  vm.c  vm.h
(+1814 files in other folders)
